# k8s-uptime-kuma

./: .releaserc.yaml  .yamllint  AGENTS.md  CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/simple/: kustomization.yml
tests/: conftest.py  test_examples.py
tests/snapshots/test_examples_simple/simple/: rendered.yaml
uptime-kuma/: kustomization.yml
uptime-kuma/base/: deployment.yaml
uptime-kuma/resources/: deployment.yaml  pvc.yaml  service.yaml
