[project]
name = "k8s-uptime-kuma"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaron D Borden",email = "adborden@a14n.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-snapshot = "^0.9.0"

[tool.pytest.ini_options]
addopts = "-v"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
